# rise2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE
app/: entt_test.cpp  flecs_test.cpp  main.cpp
data/: imgui.ini
data/rendering/shaders/: compile.sh
data/rendering/shaders/gui/: shader.frag.spv  shader.vert.spv
data/rendering/shaders/scene/: shader.frag  shader.vert
data/rendering/shaders/shadows/: shader.frag  shader.geom  shader.vert
etc/rendering/shaders/: compile.sh
etc/rendering/shaders/gui/: shader.frag  shader.vert
shaders/: compile.sh  shader.frag  shader.vert
shaders/diffuse/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
shaders/gui/: shader.vert  shader.vert.spv
shaders/scene/: shader.frag  shader.vert
src/: camera.cpp  camera.hpp  gui.cpp  gui.hpp  input.cpp  input.hpp  math.cpp  math.hpp  mesh.cpp  mesh.hpp  physic.cpp  pipeline.cpp  pipeline.hpp  platform.cpp  platform.hpp  rendering.cpp  rendering.hpp  resources.cpp  resources.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  system.hpp  utils.hpp
src/rise/: ecs.hpp
src/rise/components/rendering/: glm.hpp  imgui.hpp  module.cpp  module.hpp
src/rise/editor/: gui.cpp  gui.hpp
src/rise/input/: module.cpp  module.hpp
src/rise/os/: flecs_os.cpp
src/rise/physics/: module.cpp  module.hpp
src/rise/rendering/: debug.hpp  editor.cpp  editor.hpp  glm.hpp  imgui.hpp  input.cpp  input.hpp  module.cpp  module.hpp  pipeline.cpp  pipeline.hpp  renderGui.cpp  renderGui.hpp
src/rise/rendering/llgl/: core.cpp  core.hpp  gui.cpp  gui.hpp  material.cpp  material.hpp  math.cpp  math.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  module.cpp  module.hpp  pipelines.cpp  pipelines.hpp  platform.cpp  platform.hpp  resources.hpp  scene.cpp  scene.hpp  shadows.cpp  shadows.hpp  texture.cpp  texture.hpp  utils.cpp  utils.hpp  viewport.cpp  viewport.hpp
src/rise/rendering/llgl/core/: debug.hpp  platform.cpp  platform.hpp  resources.hpp  state.cpp  state.hpp  systems.cpp  systems.hpp  texture.cpp  texture.hpp  utils.cpp  utils.hpp
src/rise/rendering/llgl/gui/: pipeline.cpp  pipeline.hpp  resources.hpp  state.cpp  state.hpp  systems.cpp  systems.hpp
src/rise/rendering/llgl/pipelines/: scene.cpp  scene.hpp
src/rise/rendering/llgl/resources/: manager.cpp  manager.hpp  material.cpp  mesh.hpp  model.cpp  model.hpp  viewport.cpp  viewport.hpp
src/rise/rendering/llgl/scene/: material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  pipeline.hpp  resources.hpp  scene.cpp  state.cpp  state.hpp  systems.cpp  systems.hpp  viewport.cpp  viewport.hpp
src/rise/systems/input/: module.cpp  module.hpp
src/rise/systems/rendering/: module.cpp  module.hpp  renderGui.cpp  renderGui.hpp
src/rise/systems/rendering/core/: platform.cpp  platform.hpp  resources.hpp  systems.cpp  systems.hpp  texture.cpp  texture.hpp
src/rise/systems/rendering/gui/: pipeline.cpp  pipeline.hpp  resources.cpp  resources.hpp  state.hpp  system.hpp  systems.cpp  systems.hpp
src/rise/systems/rendering/pipeline/: gui.cpp  gui.hpp  scene.cpp  scene.hpp  state.cpp  state.hpp
src/rise/systems/rendering/rendering/: guiState.cpp  guiState.hpp  guiSystem.cpp  guiSystem.hpp  sceneState.cpp  sceneState.hpp  sceneSystem.cpp  sceneSystem.hpp  state.cpp  state.hpp  system.cpp  system.hpp
src/rise/systems/rendering/resources/: application.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  presets.cpp  presets.hpp  texture.cpp  texture.hpp  viewport.cpp  viewport.hpp
src/rise/systems/rendering/scene/: mesh.cpp  mesh.hpp  pipeline.cpp  pipeline.hpp  resources.hpp  systems.cpp  systems.hpp
src/rise/systems/rendering/util/: debug.cpp  dirty.cpp  dirty.hpp  resources.cpp  resources.hpp
src/rise/util/: ecs.hpp  flecs_os.hpp  gui.cpp  gui.hpp  soa.hpp
